--- a/config.test.yaml
+++ b/config.test.yaml
@@ -1,4 +1,4 @@
-debug: true
+debug: false
 
 ssl: false
 
@@ -14,14 +14,20 @@ db:
   dialect: postgres
   host: localhost
   port: 8432
-  username: navpool
-  password: navpool
-  dbname: navpool
+  username: postgres
+  password: password
+  dbname: postgres
   sslMode: disable
   logMode: true
 
 Networks:
-  - name: devnet
+  - name: mainnet
+    host: localhost
+    port: 8332
+    username: username
+    password: password
+    passphrase: passphrase
+  - name: testnet
     host: localhost
     port: 8332
     username: username
