--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -13,9 +13,23 @@ server:
 db:
   dialect: postgres
   host: localhost
-  port: 8432
+  port: 54321
   username: postgres
   password: password
   dbname: postgres
   sslMode: disable
   logMode: true
+
+Networks:
+  - name: mainnet
+    host: localhost
+    port: 8332
+    username: user
+    password: password
+    passphrase: passphrase
+  - name: testnet
+    host: localhost
+    port: 8332
+    username: username
+    password: password
+    passphrase: passphrase
