--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.1'
 
 services:
-  db:
+  database:
     image: postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: password
     ports:
-      - "8432:5432"
+      - "54321:5432"
